--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   video_player: ^0.10.11+2
+  responsive_builder: ^0.1.2
 
 dev_dependencies:
   flutter_test:
